💄 fixed svg favicon, added custom scrollbar

--- a/styles/global.css
+++ b/styles/global.css
@@ -72,6 +72,20 @@ body {
   background-blend-mode: saturation;
 }
 
+html::-webkit-scrollbar {
+  width: 10px;
+}
+
+html::-webkit-scrollbar-track {
+  background-color: var(--gray-20);
+  opacity: 0;
+}
+
+html::-webkit-scrollbar-thumb {
+  background-color: var(--scrollbar-color);
+  border-radius: 10px;
+}
+
 main {
   display: grid;
   justify-content: center;
